# imgui_template

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.md  cmake_config.h.in  main.cpp
cmake/: customTargets.cmake  libs.cmake  vars.cmake
cmake/funcs/: libraryAssist.cmake  warnings.cmake
src/: CMakeLists.txt
src/backend/: CMakeLists.txt  GLOBAL.cpp  GLOBAL.hpp  defines.hpp
src/frontend/: BaseWindow.cpp  BaseWindow.hpp  CMakeLists.txt  MasterWindow.cpp  MasterWindow.hpp
